--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="overview-hero">
             <div class="container">
                 <div class="overview-hero-image">
-                    <img src="#" alt="">
+                    <img src="undraw_mindfulness_d853.png" alt="Healthy living">
                 </div>
                 <div class="overview-hero-text">
                     <h2>Live  your healthiest life now!</h2>
@@ -34,34 +34,40 @@
                 </div>
             </div>
         </section>
+
         <section class="learn-about">
             <div class="container">
                 <h2>Learn About</h2>
                 <div class="cards">
+
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="undraw_artificial-intelligence_43qa.png" alt="Artificial Intelligence">
                         <div class="card-body">
                             <h3>Artificial Intelligence</h3>
                             <p>Learn how our innovations in machine learning are making a positive impact on healthcare.</p>
                         </div>
                     </div>
+
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="undraw_activity-tracker_3o6r.png" alt="Fitness Tracker">
                         <div class="card-body">
                             <h3>Fitness+ Tracker</h3>
                             <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed to help you stay in shape and feel great.</p>
                         </div>
                     </div>
+
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="undraw_morning-workout_73u9.png" alt="Healthy Lifestyle">
                         <div class="card-body">
                             <h3>Healthy Lifestyle</h3>
                             <p>Being healthy should be part of your overall lifestyle. Living a healthy lifestyle can help prevent chronic diseases and long-term illnesses.Take control of your life with these 5 simple steps.</p>
                         </div>
                     </div>
+
                 </div>
             </div>
         </section>
+
         <section class="testing">
             <div class="container">
                 <div class="testing-desciption">
@@ -73,27 +79,32 @@
                 </div>
             </div>
         </section>
+
         <section class="stories">
             <div class="container">
                 <h2>Recent Stories</h2>
+
                 <article>
-                    <img src="" alt="">
+                    <img src="doctor.jpg" alt="Doctor">
                     <div class="article-body">
                         <h3>Dr. Christopher Turk has spent his entire career caring for people’s health and wellbeing.</h3>
                         <p>After years in the healthcare system, Dr. Christopher Turk is bringing together groups of people across the world to take on big healthcare challenges through groundbreaking research and developing tools that support better care.</p>
                         <p><a href="#">Read this Story</a></p>
                     </div>
                 </article>
+
                 <article>
-                    <img src="" alt="">
+                    <img src="covid-test.jpg" alt="COVID Lab Research">
                     <div class="article-body">
                         <h3>INFO2180 Labs collaborates with the Ministry of Health and Ministry of Education on COVID-19 Risk Screening and Testing</h3>
                         <p>INFO2180 Labs, in collaboration with the Ministry of Health and Wellness and Ministry of Education, will launch a pilot project intended to expand access to COVID-19 risk screening and testing for high risk individuals in the parishes of Kingston and St. Andrew.</p>
                         <p><a href="#">Read this Story</a></p>
                     </div>
                 </article>
+
             </div>
         </section>
+
         <section class="newsletter">
             <div class="container">
                 <h3>Sign up for our newsletter</h3>
@@ -108,10 +119,15 @@
             </div>
         </section>
     </main>
+
     <footer>
         <div class="container">
-            <p>Copyright 2020, Your Name</p>
+            <p>Copyright 2025, Davi-Ann Mills</p>
         </div>
     </footer>
+
 </body>
 </html>
+
+
+
